# aml2026-group-3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NOTES.md  PREPARE_PRESENTATION.md  PROBLEMSETTING.md  README.md  README.md   environment.yaml  proposal.md  pyproject.toml  requirements.txt
data/: FOMC_Dissents_Data.xlsx  Tealbook.xlsx  beigebook_indices_icpsr.csv  macro-vars-daily.csv  macro-vars-monthly.csv  macro-vars-quarterly.csv  macro-vars-weekly.csv  metadata-macro-monthly.csv  metadata-macro.csv  metadata_speakers.xlsx
data/ar-process/: cv_results.xlsx
data/embeddings/: pca_model.pkl  speech_embeddings_full.csv  speech_embeddings_pca.csv
data/kafka_texts/: kafka_Castle.txt
slides/: bibliography.bib  slides.typ  template.typ
slides/figures/: data_timeline.typ  master_table.typ  metrics_table.typ  rel_rmse.typ  robustness_kafka.typ  var_selection.typ
slides/plots/: data_timeline.typ  rnn.typ
src/: AR-benchmark.py  ARIMA-Benchmark.ipynb  basic-tft.ipynb  chris-tft-notes.md  desc-stats.R  embeddings_pipeline.ipynb  embeddings_pipeline.py  extract-fed-speeches.ipynb  extract-us-fed-speeches.R  finBERT.ipynb  get-macro-vars.ipynb  get-macro-vars.py  get-metadata-fred.R  make_kafka_placebo.py  model-notes.md  renku-test.py  shuffle_embeddings.py  tft-macro.ipynb  tft-test-renku.ipynb  tft_gdp_cpi_basic.py  tft_simple.py
src/holdout-validation/: a_embedding_manager.py  a_speech_attention.py  b_data_frame_builder.py  benchmark_runner.py  c_benchmark_runner.py  d_tft_runner.py  data-frame-builder.py  data-processing.ipynb  data_frame_builder.py  main.py  (+11 more)
(+36 files in other folders)
