[project]
name = "aml2026-group-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fredapi>=0.5.2",
    "holidays>=0.95",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pmdarima>=2.1.1",
    "pytorch-forecasting>=1.7.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
